k8s/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service--collaborator
  namespace: services-develop-corporation
spec:
  selector:
    app: service--collaborator
  ports:
    - protocol: TCP
      name: http
      port: 5000
      targetPort: 5000
    - protocol: TCP
      name: http-monitoration
      port: 9181
      targetPort: 9090
  clusterIP: 10.106.200.127
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 192.168.0.131
