k8s/servicenodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service--collaborator
  namespace: services-develop-corporation
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 5000
    - port: 9090
      targetPort: 5000
      nodePort: 9090
  selector:
    app: service--collaborator
