k8s/gtw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "deep.com"
        - "cloud.local.develop.corporation.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
    - "cloud.local.develop.corporation.com"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
            prefix: /service--collaborator/
      route:
        - destination:
            host: service--collaborator.services-develop-corporation.svc.cluster.local
            port:
              number: 80
